--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
     "reactjs-popup": "^2.0.6",
+    "swiper": "^10.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
